--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <a href="#name">геншин</a>
     <a href="#n">Е лань</a>
     <h6 id="name"></h6>
-            <p style="background-color:white">  Genshin impact-відеогра жанру Action/RPG з відкритим світом, розроблена китайською компанією miHoYo Limited і видавана Hoyoverse. Гра розповсюджується цифровою дистрибуцією за моделлю free-to-play. Основа «Genshin Impact» — це «ґача-гра», система колекціонування та розвитку персонажів, які випадають з різною ймовірністю[4].</p>
+            <p style="border:5px solid white">  Genshin impact-відеогра жанру Action/RPG з відкритим світом, розроблена китайською компанією miHoYo Limited і видавана Hoyoverse. Гра розповсюджується цифровою дистрибуцією за моделлю free-to-play. Основа «Genshin Impact» — це «ґача-гра», система колекціонування та розвитку персонажів, які випадають з різною ймовірністю[4].</p>
            <img src="https://images.prom.ua/3198459689_w640_h640_kruzhka-genshin-impact.jpg"width="300"height="400"><img src="https://webstatic.hoyoverse.com/upload/op-public/2022/02/08/1c77d507474b5a773ef9741ff9d840f0_1350119221704835598.jpeg"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQoj-Y96bR4qeUIHtvRwtMzEKCtghfFoHjRLg0S5S3s4OsqJ9dNrsH2GwqlQzrxyPHYu8&usqp=CAU">
            <table style="background-color:lightblue;border:1px solid blue;">
         <tr>
